[FIX] web: editor avatars shouldn't overlap with statusbar when scroll
User avatars displayed in collaborative mode overlap with buttons when scrolling.

This commit extends the statusbar to take the full width, independently
of the sheet's one. Also, to avoid an ugly shadow when not scrolling, it
only adds it when the scroll is actually performed.

Steps to reproduce:
- open a task with two users
- write in the description in collaborative mode -> user avatars should be displayed
- make sure the description is long enough for the sheet to scroll
- scroll for one of the avatars to reach the sticky statusbar
=> overlap between the avatar and the statusbar

task-4907797

closes odoo/odoo#221102

X-original-commit: d1f4938e03547067aabf763c3df0aeaa628c8576

--- a/addons/web/static/src/views/form/form_controller.scss
+++ b/addons/web/static/src/views/form/form_controller.scss
@@ -301,6 +301,8 @@
     .o_form_statusbar {
         position: relative;
         z-index: 0;
+        margin-inline: calc(-1 * var(--formView-sheetBg-padding-x));
+        padding-inline: var(--formView-sheetBg-padding-x);
 
         @include media-breakpoint-up(md) {
             position: sticky;
@@ -309,7 +311,6 @@
 
             &:not(.modal .o_form_statusbar) {
                 background-color: $body-bg;
-                box-shadow: 0 0.3rem 0.25rem -0.25rem rgba(0, 0, 0, 0.075);
             }
         }
 
